# papyrus

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  dist.js  package-lock.json  package.json  readme.md  test.psc
.github/workflows/: build-cli.yaml  lint.yaml  release-cli.yaml  test.yaml
crates/auto_charset/: Cargo.toml
crates/auto_charset/src/: lib.rs
crates/papyrus_analysis/: Cargo.toml
crates/papyrus_analysis/src/: lib.rs
crates/papyrus_cst/: Cargo.toml
crates/papyrus_cst/src/: cst.rs  debug.rs  display_error.rs  lib.rs  parser.rs
crates/papyrus_cst/src/ast/: block.rs  event.rs  expr.rs  file.rs  function.rs  mod.rs  name.rs  property.rs  script.rs  state.rs  stmt.rs  support.rs  type_.rs
crates/papyrus_cst/tests/: integration.rs
crates/papyrus_fmt/: Cargo.toml
crates/papyrus_fmt/src/: lib.rs
crates/papyrus_lexer/: Cargo.toml
crates/papyrus_lexer/src/: lib.rs  tests.rs
crates/papyrus_lsp/: Cargo.toml
crates/papyrus_lsp/src/: convert.rs  main.rs  server.rs  state.rs
crates/papyrus_lsp/src/handlers/: diagnostics.rs  fmt.rs  mod.rs
crates/papyrus_parser/: Cargo.toml  papyrus.ungram
crates/papyrus_parser/src/: event.rs  grammar.rs  input.rs  lexed_str.rs  lib.rs  parser.rs  shortcuts.rs  syntax_kind.rs  tests.rs  token_set.rs
crates/papyrus_parser/src/grammar/: expressions.rs  flags.rs  header.rs  items.rs  params.rs  statements.rs  types.rs
crates/papyrus_parser/src/grammar/expressions/: atom.rs
crates/papyrus_parser/src/syntax_kind/: generated.rs
crates/papyrus_pex/: Cargo.toml
crates/papyrus_pex/src/: binary.rs  de.rs  error.rs  lib.rs  pex.rs  read.rs  write.rs
crates/papyrus_pex/src/ser/: mod.rs  reader.rs
crates/papyrus_syntax/: Cargo.toml
crates/papyrus_syntax/src/: algo.rs  ast.rs  lib.rs  parsing.rs  ptr.rs  syntax_node.rs  token_text.rs  validation.rs
crates/papyrus_syntax/src/ast/: generated.rs  token_ext.rs
crates/papyrus_syntax/src/parsing/: reparsing.rs
crates/papyrus_token/: Cargo.toml
crates/papyrus_token/src/: cursor.rs  keyword.rs  lib.rs  scanner.rs  span.rs  stream.rs  token.rs
crates/papyrus_token/src/rules/: comment.rs  identifier.rs  mod.rs  number.rs  operator.rs  string.rs  trivia.rs
extension/: extension.ts  tsconfig.json
papyrus_ast/: Cargo.toml  build.rs
papyrus_ast/src/: db.rs  generated.rs  lib.rs
papyrus_ast/src/capabilities/: code_actions.rs  code_lenses.rs  completion_items.rs  document_symbols.rs  folding_ranges.rs  hover.rs  inlay_hints.rs  semantic_tokens.rs  workspace_symbols.rs
papyrus_common/: Cargo.toml
papyrus_lsp/: Cargo.toml
papyrus_lsp/src/: main.rs
papyrus_lsp_server/: Cargo.toml
papyrus_lsp_server/src/: main.rs
tests/simple/: expected_formatted.psc  test.psc
xtask/: Cargo.toml
xtask/src/: cst_src.rs  main.rs  utils.rs
xtask/src/codegen/: gen_syntax_kinds.rs  gen_syntax_nodes.rs  mod.rs
