[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace]
default-members = ["crates/papyrus_lsp"]
members = [
  "crates/papyrus_cst",   #
  "crates/papyrus_lsp",
  "crates/papyrus_pex",
  "crates/papyrus_token",
]
resolver = "3"

[workspace.dependencies]
tree-sitter-papyrus-sse = { git = "https://github.com/SARDONYX-forks/tree-sitter-papyrus-sse", rev = "262f701" }
