[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["SARDONYX"]
repository = "https://github.com/SARDONYX-sard/papyrus"
rust-version = "1.96"

[workspace]
default-members = ["crates/papyrus_lsp"]
members = [
  "crates/papyrus_analysis",
  "crates/auto_charset",
  "crates/papyrus_cst",
  "crates/papyrus_fmt",
  "crates/papyrus_lsp",
  "crates/papyrus_pex",
  "crates/papyrus_token",
]
resolver = "3"

[workspace.dependencies]
tree-sitter-papyrus-sse = { git = "https://github.com/SARDONYX-forks/tree-sitter-papyrus-sse", rev = "262f701" }
