[package]
name = "papyrus_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
tree-sitter = "0.26.9"
tree-sitter-papyrus-sse = { git = "https://github.com/Silent-City-Projects/tree-sitter-papyrus-sse", rev = "2a5eebb" }
