[package]
name = "auto_charset"
version = "0.1.0"
description = "Convert various encoding strings to String"

authors.workspace = true
categories = ["development-tools"]
edition.workspace = true
keywords = ["charset"]
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository.workspace = true
rust-version.workspace = true

[dependencies]
chardetng = "1.0.0"
encoding_rs = "0.8.35"

# [lints]
# workspace = true
