[package]
name = "papyrus_lexer"
version = "0.0.0"
edition.workspace = true

[dependencies.memchr]
version = "2.7.6"

[dependencies.unicode-ident]
version = "1.0.22"

[dependencies.unicode-properties]
version = "0.1.4"
features = ["emoji"]
default-features = false

[dev-dependencies.expect-test]
version = "1.4.0"
