[package]
name = "papyrus_parser"
version = "0.0.0"
edition.workspace = true

[dependencies]
memchr = "2.6.1"
rowan = "0.16.0"
thiserror = "2.0.0"

[dev-dependencies]
ariadne = "0.6.0"
indexmap = "2.0.0"
anyhow = "1.0.103"
pretty_assertions = "1.3.0"
annotate-snippets = "0.12.0"
expect-test = "1.4"
unindent = "0.2.1"
criterion = "0.8.0"
